Update IST Timing

--- a/.github/workflows/update-quote.yml
+++ b/.github/workflows/update-quote.yml
@@ -2,6 +2,8 @@ name: Update Quote
 
 on:
   workflow_dispatch:  #Manually trigger the workflow
+  schedule:
+    - cron: '31 18 * * *'  # Schedule daily at 12:01 AM Indian Time
 
 jobs:
   update-readme:
