--- a/.github/workflows/update-quote.yml
+++ b/.github/workflows/update-quote.yml
@@ -3,7 +3,7 @@ name: Update Quote
 on:
   workflow_dispatch:  #Manually trigger the workflow
   schedule:
-    - cron: '55 5 * * *'  # Schedule daily at 12:01 AM Indian Time
+    - cron: '5 6 * * *'  # Schedule daily at 12:01 AM Indian Time
 
 jobs:
   update-readme:
@@ -28,8 +28,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config user.name "Kiran1689"
-          git config user.email "kirannaragund197@gmail.com"
           git add README.md
-          git commit -m "Update README with daily quote" -a
+          git -c user.name='Kiran1689' -c user.email='kirannaragund197@gmail.com' commit -m "Update README with daily quote" -a
           git push
+
